tests/miniJava/pos/001049_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) { } else if ( 0 ) { } else { } } }
