tests/miniJava/neg/005653_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class return java { }
